# ppn-mnist-neural-network

./: .plantuml_url.txt  CMakeLists.txt  README.md
Docs/: PPN_NN.md  PPN_NN_zh.md  conception_detaillee.puml  conception_detaillee_fr.md  demande_fr.md  demande_zh.md
include/: activation.hpp  layer.hpp  network.hpp  tensor.hpp
scripts/: encode_plantuml.py
src/: activation.cpp  layer.cpp  network.cpp  tensor.cpp
tests/: CMakeCache.txt  test_activations.cpp  test_linear.cpp  test_matrix.cpp  test_mlp.cpp
